--- a/index.html
+++ b/index.html
@@ -1,13 +1,8 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta http-equiv="Content-Security-Policy" content="
-    default-src 'self';
-    script-src 'self' https://js.stripe.com 'unsafe-inline' blob:;
-    connect-src 'self' https://api.stripe.com https://*.stripe.com;
-    frame-src https://js.stripe.com;
-    style-src 'self' 'unsafe-inline';
-  " />
+    
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self' https://js.stripe.com https://m.stripe.network blob:; worker-src 'self' blob:;">
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
