--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!doctype html>
 <html lang="en">
   <head>
-        <meta http-equiv="Content-Security-Policy" content="script-src 'self' https://js.stripe.com https://m.stripe.network blob:; worker-src 'self' blob:;">
+    <meta http-equiv="Content-Security-Policy" content="
+    script-src 'self' https://js.stripe.com https://m.stripe.network blob: 'unsafe-eval' 'unsafe-inline';
+    connect-src 'self' https://api.stripe.com https://sky-shifters.duckdns.org https://api.mapbox.com https://api.amadeus.com;
+    style-src 'self' 'unsafe-inline';
+  ">
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
