--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Security-Policy" content="
     script-src 'self' https://js.stripe.com https://m.stripe.network 'unsafe-eval' 'unsafe-inline' blob: data:;
     script-src-elem 'self' https://js.stripe.com https://m.stripe.network 'unsafe-eval' 'unsafe-inline' blob:;
-    connect-src 'self' https://api.stripe.com https://sky-shifters.duckdns.org https://api.mapbox.com https://api.amadeus.com blob:;
+    connect-src 'self' https://api.stripe.com https://sky-shifters.duckdns.org https://api.mapbox.com https://events.mapbox.com https://api.amadeus.com blob:;
     style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
     img-src 'self' data: https://i.pinimg.com https://js.stripe.com https://m.stripe.network;
     frame-src 'self' https://js.stripe.com;
@@ -12,6 +12,7 @@
     object-src 'none';
     base-uri 'self';
     form-action 'self' https://checkout.stripe.com;
+    worker-src 'self' blob:;
     ">
         <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
