--- a/index.html
+++ b/index.html
@@ -2,17 +2,13 @@
 <html lang="en">
   <head>
     <meta http-equiv="Content-Security-Policy" content="
-    script-src 'self' https://js.stripe.com https://m.stripe.network 'unsafe-eval' 'unsafe-inline' blob: data:;
-    script-src-elem 'self' https://js.stripe.com https://m.stripe.network 'unsafe-eval' 'unsafe-inline' blob:;
-    connect-src 'self' https://api.stripe.com https://sky-shifters.duckdns.org https://api.mapbox.com https://events.mapbox.com https://api.amadeus.com blob:;
-    style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
-    img-src 'self' data: https://i.pinimg.com https://js.stripe.com https://m.stripe.network;
-    frame-src 'self' https://js.stripe.com;
-    font-src 'self' data: https://fonts.gstatic.com;
-    object-src 'none';
-    base-uri 'self';
-    form-action 'self' https://checkout.stripe.com;
+    default-src 'self';
+    script-src 'self' https://api.mapbox.com https://js.stripe.com https://m.stripe.network 'unsafe-inline' blob:;
+    style-src 'self' https://api.mapbox.com 'unsafe-inline';
+    img-src 'self' data: https://api.mapbox.com;
+    connect-src 'self' https://api.mapbox.com https://events.mapbox.com https://api.stripe.com;
     worker-src 'self' blob:;
+    frame-src 'self' https://js.stripe.com https://hooks.stripe.com;
     ">
         <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
