--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     script-src 'self' https://api.mapbox.com https://js.stripe.com https://m.stripe.network 'unsafe-inline' blob:;
     style-src 'self' https://api.mapbox.com 'unsafe-inline';
     img-src 'self' data: https://api.mapbox.com;
-    connect-src 'self' https://api.mapbox.com https://events.mapbox.com https://api.stripe.com;
+    connect-src 'self' https://api.mapbox.com https://events.mapbox.com https://api.stripe.com https://sky-shifters.duckdns.org;
     worker-src 'self' blob:;
     frame-src 'self' https://js.stripe.com https://hooks.stripe.com;
     ">
