--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta http-equiv="Content-Security-Policy" content="
     default-src 'self';
     script-src 'self' https://api.mapbox.com https://js.stripe.com https://m.stripe.network 'unsafe-inline' blob:;
-    style-src 'self' https://api.mapbox.com 'unsafe-inline';
+    script-src-elem 'self' https://api.mapbox.com https://js.stripe.com https://m.stripe.network 'unsafe-inline' blob:;
+    style-src 'self' https://api.mapbox.com 'unsafe-inline' https://fonts.googleapis.com;
     img-src 'self' data: https://api.mapbox.com;
+    font-src 'self' https://fonts.gstatic.com;
     connect-src 'self' https://api.mapbox.com https://events.mapbox.com https://api.stripe.com https://sky-shifters.duckdns.org https://api.amadeus.com;
     worker-src 'self' blob:;
     frame-src 'self' https://js.stripe.com https://hooks.stripe.com;
