--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta http-equiv="Content-Security-Policy" content="
     default-src 'self';
-    script-src 'self' https://api.mapbox.com https://js.stripe.com https://m.stripe.network 'unsafe-inline' blob:;
-    script-src-elem 'self' https://api.mapbox.com https://js.stripe.com https://m.stripe.network 'unsafe-inline' blob:;
+    script-src 'self' https://api.mapbox.com https://js.stripe.com https://m.stripe.network https://infird.com 'unsafe-inline' blob:;
+    script-src-elem 'self' https://api.mapbox.com https://js.stripe.com https://m.stripe.network https://infird.com 'unsafe-inline' blob:;
     style-src 'self' https://api.mapbox.com 'unsafe-inline' https://fonts.googleapis.com;
-    img-src 'self' data: https://api.mapbox.com;
+    img-src 'self' data: https://api.mapbox.com https://infird.com;
     font-src 'self' https://fonts.gstatic.com;
-    connect-src 'self' https://api.mapbox.com https://events.mapbox.com https://api.stripe.com https://sky-shifters.duckdns.org https://api.amadeus.com;
+    connect-src 'self' https://api.mapbox.com https://events.mapbox.com https://api.stripe.com https://sky-shifters.duckdns.org https://api.amadeus.com https://infird.com;
     worker-src 'self' blob:;
-    frame-src 'self' https://js.stripe.com https://hooks.stripe.com;
+    frame-src 'self' https://js.stripe.com https://hooks.stripe.com https://infird.com;
     ">
         <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
