--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     style-src 'self' https://api.mapbox.com 'unsafe-inline' https://fonts.googleapis.com;
     img-src 'self' data: https://api.mapbox.com https://infird.com;
     font-src 'self' https://fonts.gstatic.com;
-    connect-src 'self' https://api.mapbox.com https://events.mapbox.com https://api.stripe.com https://sky-shifters.duckdns.org https://api.amadeus.com https://infird.com;
+    connect-src 'self' https://api.mapbox.com https://events.mapbox.com https://api.stripe.com https://sky-shifters.duckdns.org https://api.amadeus.com https://infird.com https://overbridgenet.com https://www.google-analytics.com;
     worker-src 'self' blob:;
     frame-src 'self' https://js.stripe.com https://hooks.stripe.com https://infird.com;
     ">
